--- a/Saket.Engine/Saket.Engine.csproj
+++ b/Saket.Engine/Saket.Engine.csproj
@@ -16,7 +16,10 @@
 
 	<ItemGroup>
 		<PackageReference Include="ImGui.NET" Version="1.87.3" />
-		<PackageReference Include="OpenTK" Version="4.7.4" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+		<PackageReference Include="OpenTK" Version="4.7.5" />
+		<PackageReference Include="StbImageSharp" Version="2.27.12" />
+		<PackageReference Include="System.Drawing.Common" Version="6.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
