--- a/Saket.Engine.Example/Saket.Engine.Example.csproj
+++ b/Saket.Engine.Example/Saket.Engine.Example.csproj
@@ -11,6 +11,14 @@
 		<PublishReadyToRun>true</PublishReadyToRun>
 		
 	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+	  <LangVersion>preview</LangVersion>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+	  <LangVersion>preview</LangVersion>
+	</PropertyGroup>
 	
 	
 
