--- a/Saket.Engine.Net/Saket.Engine.Net.Litenetlib/Saket.Engine.Net.Litenetlib.csproj
+++ b/Saket.Engine.Net/Saket.Engine.Net.Litenetlib/Saket.Engine.Net.Litenetlib.csproj
@@ -6,6 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <LangVersion>preview</LangVersion>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <LangVersion>preview</LangVersion>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="LiteNetLib" Version="0.9.5.2" />
   </ItemGroup>
