Removed Serialization and added Readme

--- a/Saket.Engine/Saket.Engine.csproj
+++ b/Saket.Engine/Saket.Engine.csproj
@@ -21,6 +21,7 @@
 	<!-- References -->
 	<ItemGroup>
 		<ProjectReference Include="..\..\Saket.ECS\Saket.ECS\Saket.ECS.csproj" />
+		<ProjectReference Include="..\..\Saket.Serialization\Saket.Serialization\Saket.Serialization.csproj" />
 		<ProjectReference Include="..\..\Saket.UI\Saket.UI\Saket.UI.csproj" />
 	</ItemGroup>
 
