Networking Part Three
Known buffer bugs

--- a/Saket.Engine.Tests/Saket.Engine.Tests.csproj
+++ b/Saket.Engine.Tests/Saket.Engine.Tests.csproj
@@ -24,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Saket.Engine.Net\Saket.Engine.Net\Saket.Engine.Net.csproj" />
     <ProjectReference Include="..\Saket.Engine\Saket.Engine.csproj" />
   </ItemGroup>
 
