--- a/Saket.Engine/Saket.Engine.csproj
+++ b/Saket.Engine/Saket.Engine.csproj
@@ -2,7 +2,7 @@
 	<!-- Settings -->
 	<PropertyGroup>
 		<OutputType>Library</OutputType>
-		<TargetFramework>net6.0</TargetFramework>
+		<TargetFramework>net7.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 		<Platforms>AnyCPU</Platforms>
@@ -26,10 +26,13 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="FreeTypeSharp" Version="1.1.3" />
 		<PackageReference Include="ImGui.NET" Version="1.87.3" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 		<PackageReference Include="OpenTK" Version="4.7.5" />
+		<PackageReference Include="SharpFont" Version="4.0.1" />
 		<PackageReference Include="StbImageSharp" Version="2.27.12" />
+		<PackageReference Include="StbTrueTypeSharp" Version="1.26.11" />
 		<PackageReference Include="System.Drawing.Common" Version="6.0.0" />
 	</ItemGroup>
 
@@ -40,7 +43,14 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Folder Include="Filetypes\Audio\MP3\" />
+	  <Folder Include="Filetypes\Audio\WAV\" />
+	  <Folder Include="Filetypes\Image\ICO\" />
+	  <Folder Include="Filetypes\Image\QOI\" />
+	  <Folder Include="Filetypes\Image\PNG\" />
 	  <Folder Include="IMGUI\" />
+	  <Folder Include="Audio\" />
 	  <Folder Include="Platform\Windows\" />
+	  <Folder Include="Typography\Rasterization\" />
 	</ItemGroup>
 </Project>
