--- a/Saket.Engine.Net/Saket.Engine.Net/Saket.Engine.Net.csproj
+++ b/Saket.Engine.Net/Saket.Engine.Net/Saket.Engine.Net.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Saket.ECS\Saket.ECS\Saket.ECS.csproj" />
+    <ProjectReference Include="..\..\Saket.ECS\Saket.ECS\Saket.ECS.csproj" />
     <ProjectReference Include="..\..\Saket.Engine\Saket.Engine.csproj" />
   </ItemGroup>
 
