Packing and Atlases

--- a/Saket.Engine.Example/Saket.Engine.Example.csproj
+++ b/Saket.Engine.Example/Saket.Engine.Example.csproj
@@ -9,6 +9,7 @@
 		<PublishSingleFile Condition="'$(Configuration)' == 'Release'">true</PublishSingleFile>
 		<SelfContained>true</SelfContained>
 		<PublishReadyToRun>true</PublishReadyToRun>
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 		
 	</PropertyGroup>
 
