--- a/Saket.Engine/Saket.Engine.csproj
+++ b/Saket.Engine/Saket.Engine.csproj
@@ -24,11 +24,13 @@
 	<!-- References -->
 
 	<ItemGroup>
+		<PackageReference Include="ExCSS" Version="4.2.0" />
 		<PackageReference Include="ImGui.NET" Version="1.87.3" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 		<PackageReference Include="OpenTK" Version="4.7.5" />
 		<PackageReference Include="PInvoke.User32" Version="0.7.124" />
 		<PackageReference Include="StbImageSharp" Version="2.27.12" />
+		<PackageReference Include="SvgPathProperties" Version="1.1.2" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -42,10 +44,6 @@
 	  <Folder Include="Audio\FLAC\" />
 	  <Folder Include="Audio\WAV\" />
 	  <Folder Include="Graphics\Renderers\" />
-	  <Folder Include="Image\ICO\" />
-	  <Folder Include="Image\SVG\" />
-	  <Folder Include="Image\QOI\" />
-	  <Folder Include="Image\PNG\" />
 	  <Folder Include="IMGUI\" />
 	  <Folder Include="Audio\" />
 	  <Folder Include="Typography\Rasterization\" />
