--- a/Saket.Engine.Platform/Saket.Engine.Platform.csproj
+++ b/Saket.Engine.Platform/Saket.Engine.Platform.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Saket.WebGPU\Saket.WebGPU.csproj" />
+    <Folder Include="Audio\" />
   </ItemGroup>
 
 </Project>
