--- a/Saket.Engine.Platform/Saket.Engine.Platform.csproj
+++ b/Saket.Engine.Platform/Saket.Engine.Platform.csproj
@@ -11,4 +11,8 @@
     <Folder Include="Audio\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\WebGPUSharp\WebGpuSharp.csproj" />
+  </ItemGroup>
+
 </Project>
