--- a/Saket.Engine/Saket.Engine.csproj
+++ b/Saket.Engine/Saket.Engine.csproj
@@ -21,7 +21,6 @@
 	<!-- References -->
 
 	<ItemGroup>
-		<PackageReference Include="ImGui.NET" Version="1.91.0.1" />
 		<PackageReference Include="StbImageSharp" Version="2.27.14" />
 	</ItemGroup>
 
@@ -38,7 +37,14 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\ImGui.NET\src\ImGui.NET\ImGui.NET.csproj" />
 	  <ProjectReference Include="..\Saket.ECS\Saket.ECS\Saket.ECS.csproj" />
 	  <ProjectReference Include="..\WebGPUSharp\WebGpuSharp.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Update="cimgui.dll">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 </Project>
