--- a/Saket.Engine/Saket.Engine.csproj
+++ b/Saket.Engine/Saket.Engine.csproj
@@ -17,6 +17,9 @@
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Publish|AnyCPU'">
 	  <LangVersion>preview</LangVersion>
 	</PropertyGroup>
+	<ItemGroup>
+	  <None Remove="Resources\shader_renderer_gizmo.wgsl" />
+	</ItemGroup>
 	
 	<!-- References -->
 
@@ -32,6 +35,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <EmbeddedResource Include="Resources\shader_renderer_gizmo.wgsl" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <Folder Include="Audio\" />
 	  <Folder Include="Platform\" />
 	</ItemGroup>
@@ -41,6 +48,21 @@
 	  <ProjectReference Include="..\Saket.ECS\Saket.ECS\Saket.ECS.csproj" />
 	  <ProjectReference Include="..\Saket.Serialization\Saket.Serialization\Saket.Serialization.csproj" />
 	  <ProjectReference Include="..\WebGPUSharp\WebGpuSharp.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Compile Update="Properties\Resources.Designer.cs">
+	    <DesignTime>True</DesignTime>
+	    <AutoGen>True</AutoGen>
+	    <DependentUpon>Resources.resx</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Update="Properties\Resources.resx">
+	    <Generator>ResXFileCodeGenerator</Generator>
+	    <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+	  </EmbeddedResource>
 	</ItemGroup>
 
 	<ItemGroup>
